--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
+        "laravel/telescope": "^3.1",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
